--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <head>
   <meta charset="utf-8" />
   <title>
-    Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on SOL
+    Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on Pulse
   </title>
   <meta
     content="Spike is Matt Furie&#x27;s first original drawing from 1984. This goofy, awkward, and friendly dinosaur is going to be the next household name in crypto."
     name="description" />
-  <meta content="Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on SOL" property="og:title" />
+  <meta content="Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on Pulse" property="og:title" />
   <meta
     content="Spike is Matt Furie&#x27;s first original drawing from 1984. This goofy, awkward, and friendly dinosaur is going to be the next household name in crypto."
     property="og:description" />
   <meta content="images/6680921c0af4eff7209bbd85_spikehead.png" property="og:image" />
-  <meta content="Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on SOL" property="twitter:title" />
+  <meta content="Spike - Inspired by Matt Furie&#x27;s First Drawing - Available on Pulse" property="twitter:title" />
   <meta
     content="Spike is Matt Furie&#x27;s first original drawing from 1984. This goofy, awkward, and friendly dinosaur is going to be the next household name in crypto."
     property="twitter:description" />
@@ -133,9 +133,9 @@
           </a>
         </div>
         <div class="nav-icons">
-          <a href="https://t.me/SpikeMattFurie" target="_blank" class="icon-wrap w-inline-block"><img
+          <a href="https://t.me/SpikeonPulse_Channel" target="_blank" class="icon-wrap w-inline-block"><img
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
-              class="s-icon" /></a><a href="https://x.com/Spike_Furie_" target="_blank"
+              class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
               alt="X Social Icon" class="s-icon" /></a><a href="https://pump.fun/board"
             class="icon-wrap w-inline-block"><img src="images/logo (1).webp" loading="lazy" alt class="s-icon" /></a>
@@ -161,9 +161,9 @@
           </a>
         </address>
         <div class="nav-icons">
-          <a href="https://t.me/SpikeMattFurie" target="_blank" class="icon-wrap w-inline-block"><img
+          <a href="https://t.me/SpikeonPulse_Channel" target="_blank" class="icon-wrap w-inline-block"><img
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
-              class="s-icon" /></a><a href="https://x.com/Spike_Furie_" target="_blank"
+              class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
               alt="X Social Icon" class="s-icon" /></a><a href="https://pump.fun/board" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/logo (1).webp" loading="lazy" alt class="s-icon" /></a>
@@ -238,7 +238,7 @@
         <h2 id="w-node-_83361c75-e2b9-e48c-3d8f-b752f42686d4-02dfd8f9" class="h1 hero large-span">
           SPIKE IS A <span class="lo-s">laid-back</span>
           <span class="lg-s">food-loving</span> dinosaur meme THAT NOW LIVES
-          ON <span class="lb-s">SOL</span>
+          ON <span class="lb-s">Pulse</span>
         </h2>
         <div class="grid-half sp-images">
           <div id="w-node-_726a066d-316f-f8f6-3a6a-ba0f5d08a4df-02dfd8f9"
@@ -343,7 +343,7 @@
       <div class="container xs">
         <div id="w-node-c4155858-8378-ae8a-128a-d66b312a686d-02dfd8f9" class="tb">
           <h2 id="w-node-c4155858-8378-ae8a-128a-d66b312a686e-02dfd8f9" class="h2 white center">
-            Be sure to find me on SOL at 0x1984 and feel safe with your big
+            Be sure to find me on Pulse at 0x1984 and feel safe with your big
             bro as:
           </h2>
           <h3 id="w-node-c4155858-8378-ae8a-128a-d66b312a6870-02dfd8f9" class="h2 white center y">
@@ -381,17 +381,17 @@
           Furie&#x27;s imagination.
         </p>
         <nav class="icons-r">
-          <a href="https://x.com/Spike_Furie_" target="_blank" class="icon-wrap _w-t w-inline-block"><img
+          <a href="https://x.com/Spike_PLSX" target="_blank" class="icon-wrap _w-t w-inline-block"><img
               src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy" alt="X Social Icon" class="s-icon" />
             <p id="w-node-_79a3ae6c-af71-6c14-8c73-1e5ef554614a-02dfd8f9" class="p">
               X - Spike Furie
             </p>
-          </a><a href="https://t.me/SpikeMattFurie" target="_blank" class="icon-wrap _w-t w-inline-block"><img
+          </a><a href="https://t.me/SpikeonPulse_Channel" target="_blank" class="icon-wrap _w-t w-inline-block"><img
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon" class="s-icon" />
             <p id="w-node-ce050972-8f8b-fe8a-7916-b05b65ff197e-02dfd8f9" class="p">
               Telegram
             </p>
-          </a><a href="https://t.me/SpikeMattFurie" target="_blank" class="icon-wrap _w-t w-inline-block"><img
+          </a><a href="https://t.me/SpikeonPulse_Channel" target="_blank" class="icon-wrap _w-t w-inline-block"><img
               src="fonts/668091859ca956d2d9e5ea23_TelegramGlobal%201.svg" loading="lazy"
               alt="Spike Global Telegram logo" class="s-icon" />
             <p id="w-node-b86debfd-80d9-c227-9860-244f96f64c12-02dfd8f9" class="p">
@@ -448,7 +448,7 @@
                 </h2>
                 <p id="w-node-_8a7fa5a2-81d9-45c3-339d-2d0292ea6855-02dfd8f9" class="p l">
                   Huge shoutout to our incredible and generous community! You
-                  all are absolute legends! We&#x27;re a safe choice,
+                  all are abPulseute legends! We&#x27;re a safe choice,
                   welcoming our Pepe Boysclub and crypto frens from all
                   chains. Our community stands out because everyone takes
                   responsibility, constantly working towards realizing our
@@ -469,13 +469,13 @@
                     images/66809193205ea4d50d03ac41_eth0x1984_white-p-800.png   800w,
                     images/66809193205ea4d50d03ac41_eth0x1984_white-p-1080.png 1080w,
                     images/66809193205ea4d50d03ac41_eth0x1984_white.png        1224w
-                  " alt="Spike Solana logo that reads 0x1984" class="img-radius" />
+                  " alt="Spike Pulseana logo that reads 0x1984" class="img-radius" />
               <div id="w-node-_54967425-a2ac-5cbe-5d52-f8c906d4be0a-02dfd8f9" class="content">
                 <h2 id="w-node-_4e5a6717-1257-19ae-2953-2418db34dbb9-02dfd8f9" class="h2 db">
-                  0x1984 on SOL
+                  0x1984 on Pulse
                 </h2>
                 <p id="w-node-_54967425-a2ac-5cbe-5d52-f8c906d4be0d-02dfd8f9" class="p l">
-                  SOL is king, it&#x27;s the biggest and most exciting
+                  Pulse is king, it&#x27;s the biggest and most exciting
                   playground for degens with the most liquidity. Get ready for
                   our moon mission and an unforgettable ride on the Spike
                   FurieVerse!
@@ -562,7 +562,7 @@
                 " alt="Circular spike logo reading 0x1984" class="full-img" /></a>
 
           <div>
-            <p class="mtba ud">©2024 by Spike. All rights reserved.</p>
+            <p class="mtba ud">©2025 by Spike. All rights reserved.</p>
             <p class="mtba ud sf">
               Contract Address:
               <span data-clipboard-text="TBA" class="ca-ad">TBA</span>
@@ -629,8 +629,8 @@
 
       // Optionally, handle clipboard errors (usually due to permissions issues)
       clipboard.on("error", function (e) {
-        console.error("Action:", e.action);
-        console.error("Trigger:", e.trigger);
+        conPulsee.error("Action:", e.action);
+        conPulsee.error("Trigger:", e.trigger);
         alert("Failed to copy text.");
       });
     });
