--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
               class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
-              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.fun/board"
-            class="icon-wrap w-inline-block"><img src="images/logo (1).webp" loading="lazy" alt class="s-icon" /></a>
+              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/"
+            class="icon-wrap w-inline-block"><img src="images/pump.png" loading="lazy" alt class="s-icon" /></a>
         </div>
       </div>
       <div class="nav-mobile">
@@ -165,8 +165,8 @@
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
               class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
-              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.fun/board" target="_blank"
-            class="icon-wrap w-inline-block"><img src="images/logo (1).webp" loading="lazy" alt class="s-icon" /></a>
+              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/" target="_blank"
+            class="icon-wrap w-inline-block"><img src="images/pump.png" loading="lazy" alt class="s-icon" /></a>
         </div>
       </nav>
     </div>
