--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
               class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
-              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/"
+              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/token/0xBFB7555173644213ee5d767694810D8c25e653bf"
             class="icon-wrap w-inline-block"><img src="images/pump.png" loading="lazy" alt class="s-icon" /></a>
         </div>
       </div>
@@ -165,7 +165,7 @@
               src="images/668091f75e8fbbdcdff40ed0_Telegram-1.png" loading="lazy" alt="Telegram Icon"
               class="s-icon" /></a><a href="https://x.com/Spike_PLSX" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/668091f79fe32c9377f5f0ff_X.png" loading="lazy"
-              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/" target="_blank"
+              alt="X Social Icon" class="s-icon" /></a><a href="https://pump.tires/token/0xBFB7555173644213ee5d767694810D8c25e653bf" target="_blank"
             class="icon-wrap w-inline-block"><img src="images/pump.png" loading="lazy" alt class="s-icon" /></a>
         </div>
       </nav>
@@ -207,7 +207,7 @@
             </p>
             <p id="w-node-e53cd205-a4ad-49ab-b264-d9e6fe1d2d8f-02dfd8f9" class="p ccad stp ccd">
               Contract Address:
-              <span data-clipboard-text="TBA" class="ca-ad">TBA</span>
+              <span data-clipboard-text="0xBFB7555173644213ee5d767694810D8c25e653bf" class="ca-ad">0xBFB7555173644213ee5d767694810D8c25e653bf</span>
             </p>
           </div>
           <img class="hero-sticker" src="images/6680921c0af4eff7209bbd85_spikehead.png" alt style="
